# tree-sitter-systemd

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  README_CN.md  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/go/: binding_test.go
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_systemd/: __init__.py
bindings/rust/: lib.rs
src/: grammar.json  node-types.json  parser.c
